--- a/DeveloperTest/appsettings.json
+++ b/DeveloperTest/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ServiceSightDevTest;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=DESKTOP-MBE56GJ\\SQLEXPRESS;Initial Catalog=ServiceSightDevTest;Integrated Security=True"
+    //"Server=(localdb)\\mssqllocaldb;Database=ServiceSightDevTest;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
