Revert "Initial commit"
This reverts commit c357f54131cff38b8f4d211495cf664195aee7d1.

--- a/DeveloperTest/appsettings.json
+++ b/DeveloperTest/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-MBE56GJ\\SQLEXPRESS;Initial Catalog=ServiceSightDevTest;Integrated Security=True"
-    //"Server=(localdb)\\mssqllocaldb;Database=ServiceSightDevTest;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ServiceSightDevTest;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
